--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "4.0.0-alpha.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
