--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "kvothe",
   "version": "0.0.1-alpha",
   "description": "The composer assistant",
-  "main": "./src/index.jsx",
+  "main": "./src/app.jsx",
   "repository": {},
   "author": "Soywod <clement.douin@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -22,12 +23,18 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack/dev.config.js"
+    "start": "webpack-dev-server -d --config ./webpack/dev.config.js",
+    "build": "rm -f ./dist/* && webpack -p --config ./webpack/prod.config.js",
+    "rsync": "rsync -azvh -e 'ssh -p 60021' --delete-before dist/ soywod@soywod.fr:kvothe",
+    "deploy": "npm run build && npm run rsync"
   }
 }
