--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-ga": "^2.1.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "reactstrap": "^4.2.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -34,7 +37,7 @@
   "scripts": {
     "start": "webpack-dev-server -d --config ./webpack/dev.config.js",
     "build": "rm -f ./dist/* && webpack -p --config ./webpack/prod.config.js",
-    "rsync": "rsync -azvh -e 'ssh -p 60021' --delete-before dist/ soywod@soywod.fr:kvothe",
-    "deploy": "npm run build && npm run rsync"
+    "deploy": "rsync -azvh -e 'ssh -p 60021' --delete-before dist/ soywod@soywod.fr:kvothe",
+    "prod": "npm run build && npm run rsync"
   }
 }
