--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
-    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
-    "reactstrap": "^4.2.0",
-    "redux": "^3.6.0"
+    "reactstrap": "^4.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
