--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "kvothe",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "description": "The composer assistant",
-  "main": "./src/app.jsx",
   "repository": {},
-  "author": "Soywod <clement.douin@gmail.com>",
+  "author": "soywod <clement.douin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "bootstrap": "4.0.0-alpha.6",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
-    "node-jsx": "^0.13.3",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
@@ -22,14 +27,7 @@
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
@@ -44,11 +42,8 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack/dev.js",
     "prod:client:clean": "rm -rf dist/js && rm -rf dist/css && rm -rf dist/fonts",
-    "prod:client": "npm run prod:client:clean && webpack --config webpack/prod.client.js",
-    "prod:server:clean": "rm -f dist/server.js",
-    "prod:server": "npm run prod:server:clean && webpack --config webpack/prod.server.js",
-    "prod": "npm run prod:client && npm run prod:server",
-    "start": "npm run dev",
-    "deploy": "rsync -azvh -e 'ssh -p 60021' --delete-before dist/ soywod@soywod.fr:kvothe"
+    "prod:client": "npm run prod:client:clean && webpack --config webpack/prod.js",
+    "prod:server": "babel-node src/server",
+    "start": "npm run dev"
   }
 }
