--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "prod:client": "npm run prod:client:clean && webpack --config webpack/prod.js",
     "prod:server": "babel-node src/server",
     "start": "npm run dev",
-    "deploy": "ssh -p 60021 soywod@soywod.fr \"sudo service nginx stop; sudo service supervisor stop; cd kvothe; git pull; npm run prod:client; sudo service supervisor start; sudo service nginx start;\""
+    "deploy": "ssh -p 60021 soywod@soywod.fr \"kvothe/deploy.sh\""
   }
 }
