--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack/dev.js",
-    "prod:client:clean": "rm -rf dist/js && rm -rf dist/css && rm -rf dist/fonts",
-    "prod:client": "npm run prod:client:clean && webpack --config webpack/prod.js",
+    "prod:client:clean": "rm -rf dist/*",
+    "prod:client": "npm run prod:client:clean; cp src/static/* dist/; webpack --config webpack/prod.js",
     "prod:server": "babel-node src/server",
     "start": "npm run dev",
     "deploy": "ssh -p 60021 soywod@soywod.fr \"kvothe/deploy.sh\""
