--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.24.0",
     "bootstrap": "4.0.0-alpha.6",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
@@ -24,6 +25,7 @@
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
+    "react-router-sitemap": "^1.0.8",
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
@@ -40,8 +42,9 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack/dev.js",
+    "sitemap": "babel-node sitemap-builder.js",
     "prod:client:clean": "rm -rf dist/*",
-    "prod:client": "npm run prod:client:clean; cp src/static/* dist/; webpack --config webpack/prod.js",
+    "prod:client": "npm run prod:client:cleanyarn; cp src/static/* dist/; npm run sitemap; webpack --config webpack/prod.js",
     "prod:server": "babel-node src/server",
     "start": "npm run dev",
     "deploy": "ssh -p 60021 soywod@soywod.fr \"cd kvothe; ./deploy.sh\""
