--- a/package.json
+++ b/package.json
@@ -6,34 +6,36 @@
   "author": "soywod <clement.douin@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.23.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.24.0",
     "bootstrap": "4.0.0-alpha.6",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
     "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "react-router-sitemap": "^1.0.8",
+    "react-transition-group": "^1.1.3",
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.24.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "flow-bin": "^0.47.0",
+    "flow-typed": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
