--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-ga": "^2.1.2",
