--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "flow-bin": "^0.47.0",
     "flow-typed": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "js-given": "^0.1.1",
     "lodash": "^4.17.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
