--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,17 @@
 {
-	"parserOptions": {
-		"ecmaVersion": 6,
-		"sourceType": "module",
-		"ecmaFeatures": {
-			"jsx": true
-		}
-	},
-	"rules": {
-		"semi": 2
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "rules": {
+    "semi": 2
+  },
+  {
+    "env": {
+      "jest": true
+    }
   }
 }
