--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "react-router-sitemap": "^1.0.8",
@@ -34,8 +34,8 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "flow-bin": "^0.47.0",
-    "flow-typed": "^2.1.2",
+    "flow-bin": "^0.53.1",
+    "flow-typed": "^2.1.5",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^20.0.4",
     "js-given": "^0.1.4",
@@ -56,7 +56,7 @@
     "prod:client:clean": "rm -rf dist/*",
     "prod:client": "npm run prod:client:clean; cp src/static/* dist/; webpack --config webpack/prod.js",
     "prod:server": "babel-node src/server",
-    "start": "npm run dev",
+    "start": "yarn dev",
     "deploy": "ssh -p 60021 soywod@soywod.fr \"cd kvothe; ./deploy.sh\""
   }
 }
