--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "ejs": "^2.5.6",
+    "elm": "^0.18.0",
+    "elm-format": "^0.6.1-alpha",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-elm-components": "evancz/react-elm-components",
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "react-router-sitemap": "^1.0.8",
@@ -31,6 +34,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.0",
     "css-loader": "^0.26.1",
+    "elm-oracle": "^1.1.1",
+    "elm-webpack-loader": "elm-community/elm-webpack-loader",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "flow-bin": "^0.53.1",
