--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "kvothe",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "The composer assistant",
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/soywod/kvothe"
+  },
+  "main": "src/index.jsx",
   "author": "soywod <clement.douin@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-elm-components": "evancz/react-elm-components",
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "react-router-sitemap": "^1.0.8",
@@ -32,7 +33,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.0",
     "css-loader": "^0.26.1",
-    "elm-oracle": "^1.1.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "flow-bin": "^0.53.1",
